Servlet de login inicializado

--- a/projeto/nbproject/project.properties
+++ b/projeto/nbproject/project.properties
@@ -29,11 +29,13 @@ dist.jar=${dist.dir}/projeto.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.javax.servlet-api-3.0.1.jar=C:\\Bibliotecas\\javax.servlet-api-3.0.1.jar
 file.reference.postgresql-9.4.1210.jar=C:\\bibliotecas\\postgresql-9.4.1210.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.postgresql-9.4.1210.jar}
+    ${file.reference.postgresql-9.4.1210.jar}:\
+    ${file.reference.javax.servlet-api-3.0.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
