--- a/projeto/nbproject/project.properties
+++ b/projeto/nbproject/project.properties
@@ -1,10 +1,9 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
+annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
-application.title=projeto
-application.vendor=Juan
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -27,15 +26,14 @@ dist.archive.excludes=
 dist.dir=dist
 dist.jar=${dist.dir}/projeto.jar
 dist.javadoc.dir=${dist.dir}/javadoc
-endorsed.classpath=
 excludes=
-file.reference.javax.servlet-api-3.0.1.jar=C:\\Bibliotecas\\javax.servlet-api-3.0.1.jar
 file.reference.postgresql-9.4.1210.jar=C:\\bibliotecas\\postgresql-9.4.1210.jar
+file.reference.servlet-api.jar=C:\\bibliotecas\\servlet-api.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.postgresql-9.4.1210.jar}:\
-    ${file.reference.javax.servlet-api-3.0.1.jar}
+    ${file.reference.servlet-api.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -59,7 +57,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=projeto.Projeto
+main.class=
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
