--- a/SitesDinamicos/nbproject/project.properties
+++ b/SitesDinamicos/nbproject/project.properties
@@ -29,6 +29,7 @@ dist.jar=${dist.dir}/SitesDinamicos.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.jcalendar-1.3.3.jar=C:\\Bibliotecas\\jcalendar-1.3.3.jar
+file.reference.jsp-api.jar=C:\\Users\\Juan\\Apache Software Foundation\\Tomcat 8.5\\lib\\jsp-api.jar
 file.reference.postgresql-9.4.1210.jar=C:\\Bibliotecas\\postgresql-9.4.1210.jar
 file.reference.servlet-api.jar=C:\\Bibliotecas\\servlet-api.jar
 includes=**
@@ -36,7 +37,8 @@ jar.compress=false
 javac.classpath=\
     ${file.reference.jcalendar-1.3.3.jar}:\
     ${file.reference.postgresql-9.4.1210.jar}:\
-    ${file.reference.servlet-api.jar}
+    ${file.reference.servlet-api.jar}:\
+    ${file.reference.jsp-api.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
