Toda a parte de convite feita

--- a/web.xml
+++ b/web.xml
@@ -13,7 +13,7 @@
 	<display-name></display-name>
 	
 	<welcome-file-list>
-		<welcome-file>index.htm</welcome-file>
+		<welcome-file>Index.htm</welcome-file>
 	</welcome-file-list>
 	
 	<servlet>
