--- a/SitesDinamicos/nbproject/private/private.properties
+++ b/SitesDinamicos/nbproject/private/private.properties
@@ -1,2 +1,3 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\Juan\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+file.reference.jsp-api.jar-1=C:\\Bibliotecas\\jsp-api.jar
+user.properties.file=C:\\Users\\Rodrigo Bento\\AppData\\Roaming\\NetBeans\\8.1\\build.properties
