--- a/SitesDinamicos/nbproject/private/private.properties
+++ b/SitesDinamicos/nbproject/private/private.properties
@@ -1,3 +1,3 @@
 compile.on.save=true
 file.reference.jsp-api.jar-1=C:\\Users\\Juan\\Apache Software Foundation\\Tomcat 8.5\\lib\\jsp-api.jar
-user.properties.file=C:\\Users\\Rodrigo Bento\\AppData\\Roaming\\NetBeans\\8.1\\build.properties
+user.properties.file=C:\\Users\\Juan\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
