os acentos tambem sao adicionados no banco

--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,9 @@
 # Created by https://www.gitignore.io/api/netbeans
 
 ### NetBeans ###
+SitesDinamicos/nbproject/private/
 SitesDinamicos/nbproject/private/private.xml
+SitesDinamicos/nbproject/private/private.properties
 SitesDinamicos/build/
 SitesDinamicos/nbbuild/
 SitesDinamicos/dist/
