--- a/SitesDinamicos/nbproject/project.properties
+++ b/SitesDinamicos/nbproject/project.properties
@@ -28,6 +28,7 @@ dist.dir=dist
 dist.jar=${dist.dir}/SitesDinamicos.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.commons-lang3-3.0.1.jar=C:\\bibliotecas\\commons-lang3-3.0.1.jar
 file.reference.jcalendar-1.3.3.jar=C:\\Bibliotecas\\jcalendar-1.3.3.jar
 file.reference.jsp-1.jar=C:\\Bibliotecas\\jsp-1.jar
 file.reference.postgresql-9.4.1210.jar=C:\\Bibliotecas\\postgresql-9.4.1210.jar
@@ -38,7 +39,8 @@ javac.classpath=\
     ${file.reference.jcalendar-1.3.3.jar}:\
     ${file.reference.postgresql-9.4.1210.jar}:\
     ${file.reference.servlet-api.jar}:\
-    ${file.reference.jsp-1.jar}
+    ${file.reference.jsp-1.jar}:\
+    ${file.reference.commons-lang3-3.0.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
