--- a/web.xml
+++ b/web.xml
@@ -6,9 +6,7 @@
   version="3.1"
   metadata-complete="true">
 
-    	<description>
-    
-	</description>
+    <description></description>
     
 	<display-name></display-name>
 	
@@ -34,4 +32,16 @@
 	   <error-code>404</error-code>  
 	   <location>/Erro.html</location>  
 	</error-page>
+	
+		
+	<filter>
+		<filter-name>verificaSessao</filter-name>
+		<filter-class>projeto.psd.filtros.Filtro</filter-class>
+	</filter>
+	
+		<filter-mapping>
+			<filter-name>verificaSessao</filter-name>
+			<url-pattern>*.jsp</url-pattern>
+			<dispatcher>REQUEST</dispatcher>
+		</filter-mapping>
 </web-app>
